--- a/src/app/admin/berths/no-berths/no-berths.component.html
+++ b/src/app/admin/berths/no-berths/no-berths.component.html
@@ -11,7 +11,7 @@
         </p>
         <div class="text-center pt-10 flex justify-center px-10">
             <button routerLink="../add" type="button" class="btn btn-primary flex-grow h-[50px] max-w-[200px]">
-                <span class="text-lg">Add berth</span>
+                <span class="text-lg">Add Berth</span>
             </button>
         </div>
     </div>
