--- a/src/app/admin/integrations/integration-list/integration-list.component.html
+++ b/src/app/admin/integrations/integration-list/integration-list.component.html
@@ -1,86 +1,86 @@
 <section>
-  <div class="tw-flex-grow tw-flex tw-flex-col tw-gap-8">
-    <div class="tw-flex min-lg:tw-justify-between sm:tw-justify-center lg:tw-flex-row max-lg:tw-flex-col tw-gap-4">
-      <div class="tw-w-full tw-flex tw-gap-4 max-lg:tw-flex-col tw-items-center tw-justify-between">
-        <div class="tw-flex tw-gap-8 tw-w-full">
-          <h3 class="min-xl:tw-block max-xl:tw-hidden heading-4 tw-mr-5 tw-min-w-[250px]">Integration list</h3>
-          <searchbar class="min-xl:tw-min-w-[600px]">
+  <div class="flex-grow flex flex-col gap-8">
+    <div class="flex min-lg:justify-between sm:justify-center lg:flex-row max-lg:flex-col gap-4">
+      <div class="w-full flex gap-4 max-lg:flex-col items-center justify-between">
+        <div class="flex gap-8 w-full">
+          <h3 class="min-xl:block max-xl:hidden heading-4 mr-5 min-w-[250px]">Integration List</h3>
+          <searchbar class="min-xl:min-w-[600px]">
             <fa-icon leftIcon icon="search"></fa-icon>
-            <input #searchIntegrationName input type="text" (keyup)="applyFilter($event.target, 'name')" placeholder="Search integration name">
+            <input #searchIntegrationName input type="text" (keyup)="applyFilter($event.target, 'name')" placeholder="Search Integration Name">
             <div [style.visibility]="searchIntegrationName.value ? 'visible': 'hidden'" close (click)="searchIntegrationName.value=''; applyFilter({ value: '' }, 'name')">
               <fa-icon icon="close"></fa-icon>
             </div>
         </searchbar>
         </div>
         <div>
-            <button type="button" class="btn btn-primary tw-min-w-[130px]" routerLink="../add">{{'button.add-name' | translate: { 'name': 'integrations.title' | translate | lowercase } }}</button>
+            <button type="button" class="btn btn-primary min-w-[130px]" routerLink="../add">Add Integration</button>
         </div>
       </div>
     </div>
     <div *ngIf="(isLoading$ | async) || originalSource.length; else empty">
-        <div table class="tw-w-full tw-shadow-lg tw-bg-white">
-            <ng-scrollbar track="vertical" class="tw-min-h-[calc(100vh-200px)]">
-              <table class="material-table no-wrap tw-overflow-hidden"
+        <div table class="w-full shadow-lg bg-white">
+            <ng-scrollbar track="vertical" class="min-h-[calc(100vh-200px)]">
+              <table class="material-table no-wrap overflow-hidden"
                     [class.loading]="(isLoading$ | async)" aria-label="Usage Table"
                     cdk-table [dataSource]="dataSource">
                     
-                <ng-container cdkColumnDef="type">
+                <!-- <ng-container cdkColumnDef="type">
                   <th cdk-header-cell *cdkHeaderCellDef scope="col">
                     <div>{{'integrations.integrations-type' | translate}}</div>
                   </th>
                   <td cdk-cell *cdkCellDef="let row">{{row.type || 'Yard'}}</td>
-                </ng-container>
+                </ng-container> -->
 
                 <ng-container cdkColumnDef="name">
                   <th cdk-header-cell *cdkHeaderCellDef scope="col">
-                    <div>{{'generics.naming' | translate}}</div>
+                    <div>Name</div>
                   </th>
                   <td cdk-cell *cdkCellDef="let row">{{row.name}}</td>
                 </ng-container>
           
-                <ng-container cdkColumnDef="partner">
+                <!-- <ng-container cdkColumnDef="partner">
                   <th cdk-header-cell *cdkHeaderCellDef scope="col">
                     <div>{{'generics.partner' | translate}}</div>
                   </th>
                   <td cdk-cell *cdkCellDef="let row">{{row.partner || '-'}}</td>
-                </ng-container>
+                </ng-container> -->
           
-                <ng-container cdkColumnDef="locationName">
+                <ng-container cdkColumnDef="portName">
                   <th cdk-header-cell *cdkHeaderCellDef scope="col">
-                    <div>{{'location.title' | translate}}</div>
+                    <div>Port</div>
                   </th>
-                  <td cdk-cell *cdkCellDef="let row">{{row.locationName}}</td>
+                  <td cdk-cell *cdkCellDef="let row">{{row.portName}}</td>
                 </ng-container>
           
                 <ng-container cdkColumnDef="apiKey">
                   <th cdk-header-cell *cdkHeaderCellDef scope="col">
-                    <div>{{'integrations.api-key' | translate }}</div>
+                    <div>Api Key</div>
                   </th>
                   <td cdk-cell *cdkCellDef="let row">
-                    <span class="tw-text-transparent text-blur">{{row.apiKey | slice: 0 : (row.apiKey.length / 1.5)}}</span>
+                    <span class="text-transparent text-blur">{{row.apiKey | slice: 0 : (row.apiKey.length / 1.5)}}</span>
                     <span>{{row.apiKey | slice: (row.apiKey.length / 1.5) : row.apiKey.length }}</span>
                     
                   </td>
                 </ng-container>
   
-                <ng-container cdkColumnDef="status">
+                <!-- <ng-container cdkColumnDef="status">
                   <th cdk-header-cell *cdkHeaderCellDef scope="col">
                     <div>{{'generics.status' | translate }}</div>
                   </th>
                   <td cdk-cell *cdkCellDef="let row">-</td>
-                </ng-container>
+                </ng-container> -->
           
                 <ng-container cdkColumnDef="actions">
                   <th cdk-header-cell *cdkHeaderCellDef scope="col">
                     <div>{{'generics.actions' | translate}}</div>
                   </th>
-                  <td cdk-cell *cdkCellDef="let row" class="tw-flex tw-gap-4 tw-justify-center">
-                    <img matTooltipClass="tw-drop-shadow-lg" matTooltipPosition="above" [matTooltip]="'button.copy' | translate"
-                         src="assets/images/integration-copy.svg" class="tw-w-[19px] !tw-h-[18px] tw-cursor-pointer" (cdkCopyToClipboardCopied)="showNotificationAPIKey()" [cdkCopyToClipboard]="row.apiKey"/>
-                    <fa-icon matTooltipClass="tw-drop-shadow-lg" matTooltipPosition="above" [matTooltip]="'button.edit' | translate" 
-                             icon="eye" class="tw-text-primary tw-cursor-pointer" size="lg" [routerLink]="['../edit', row.id]"></fa-icon>
-                    <fa-icon matTooltipClass="tw-drop-shadow-lg" matTooltipPosition="above" [matTooltip]="'button.delete' | translate" 
-                             icon="xmark" class="tw-text-primary tw-cursor-pointer" size="lg" (click)="openDeleteModal(row)"></fa-icon>
+                  <td cdk-cell *cdkCellDef="let row" class="flex gap-4 justify-center">
+                    <fa-icon matTooltipClass="drop-shadow-lg" matTooltipPosition="above" [matTooltip]="'Copy'"
+                    icon="notes" class="text-primary cursor-pointer" (cdkCopyToClipboardCopied)="showNotificationAPIKey()" [cdkCopyToClipboard]="row.apiKey"></fa-icon>
+                    <fa-icon matTooltipClass="drop-shadow-lg" matTooltipPosition="above" [matTooltip]="'Edit'" 
+                             icon="eye" class="text-primary cursor-pointer" size="lg" [routerLink]="['../edit', row.id]"></fa-icon>
+                    <fa-icon matTooltipClass="drop-shadow-lg" matTooltipPosition="above" [matTooltip]="'Delete'" 
+                             icon="xmark" class="text-primary cursor-pointer" size="lg" (click)="openDeleteModal(row)"></fa-icon>
                   </td>
                 </ng-container>
           
@@ -91,7 +91,7 @@
                   <td [colSpan]="displayedColumns.length">
                     <app-loader *ngIf="(isLoading$ | async)" [isContainer]="true" [fullScreen]="false"></app-loader>
                     <span
-                      *ngIf="dataSource.length === 0 && !(isLoading$ | async)">{{'there-re-no-records' | translate}}</span>
+                      *ngIf="dataSource.length === 0 && !(isLoading$ | async)">There are no records.</span>
                   </td>
                 </tr>
               </table>
