--- a/src/app/admin/area/area-success/area-success.component.html
+++ b/src/app/admin/area/area-success/area-success.component.html
@@ -1,15 +1,15 @@
-<success-container headerTitle="Add port">
+<success-container headerTitle="Add Area">
     <div>
         <h4 class="heading-4 py-10 text-center">Success!</h4>
-        <p class="text-center heading-6 max-w-[929px] mx-auto">Your port was successfully added to network and an email was sent to you confirming the operation.</p>
+        <p class="text-center heading-6 max-w-[929px] mx-auto">Your area was successfully added and an email was sent to you confirming the operation.</p>
     </div>
     <div class="text-center py-5">
         <fa-icon icon="party-horn" class="text-primary text-[270px]"></fa-icon>
     </div>
-    <!-- <div class="flex max-md:flex-col justify-center min-xl:px-40 max-md:px-0 max-md:gap-5"> -->
     <div class="flex justify-center max-md:flex-col min-xl:px-40 max-md:px-0 max-md:gap-5 min-md:max-w-[560px] max-sm:w-full m-auto gap-5">
+        <!-- <div class="flex gap-4"> -->
         <button type="button" class="btn btn-outline-primary min-lg:min-w-[250px]" routerLink="../">Home</button>
-        <!-- <button type="button" class="btn btn-primary min-lg:min-w-[250px]" routerLink="../../location-settings">Go to Settings</button> -->
-        <button type="button" class="btn btn-primary min-lg:min-w-[250px]" routerLink="../add">New Port</button>
-    </div>
+        <button type="button" class="btn btn-primary min-lg:min-w-[250px]" routerLink="../add">New Area</button>
+    <!-- </div> -->
+</div>
 </success-container>
