--- a/src/app/admin/layout/header/admin-header.component.html
+++ b/src/app/admin/layout/header/admin-header.component.html
@@ -2,7 +2,7 @@
   <app-loader class="m-auto flex-grow" *ngIf="(isLoading$ | async)" [fullScreen]="false"></app-loader>
   <div *ngIf="!(isLoading$ | async)" class="flex flex-grow justify-center items-center gap-2">
     <fa-icon *ngIf="userRole === 'ROLE_PORT_ADMIN'" (click)="openChangeLocationModal()" icon="location-dot" class="text-primary cursor-pointer text-3xl font-bold"></fa-icon>
-    <span class="text-3xl font-bold">{{locationName$}}</span>
+    <span class="text-3xl font-bold">{{locationName$ | async}}</span>
   </div>
   <div class="logo-container" *ngIf="logoSrc" [routerLink]="logoRedirect" [relativeTo]="activatedRoute.parent">
     <img [src]="logoSrc" alt="logo">
