--- a/src/app/admin/no-location-warning/no-location-warning.component.html
+++ b/src/app/admin/no-location-warning/no-location-warning.component.html
@@ -1,15 +1,15 @@
-<div class="tw-max-w-sm tw-px-4 tw-py-4 min-sm:tw-px-16 min-sm:tw-py-8">
-    <div class="tw-whitespace-pre-line  tw-max-w-xs tw-mb-8">
-        <p class="tw-font-bold tw-text-muted tw-text-xl tw-text-center tw-mb-4 tw-text-columnCell">
+<div class="max-w-sm px-4 py-4 min-sm:px-16 min-sm:py-8">
+    <div class="whitespace-pre-line  max-w-xs mb-8">
+        <p class="font-bold text-muted text-xl text-center mb-4 text-columnCell">
         It is recommended to use a location, please create one!
         </p>
-        <p class="tw-font-bold tw-max-w-xs tw-text-center tw-text-sm tw-text-columnCell">
+        <p class="font-bold max-w-xs text-center text-sm text-columnCell">
             After you create the location, you can start using the system.
         </p>
     </div>
     
-        <div class="tw-flex tw-justify-center">
-            <button tabIndex="-1" (click)="confirm()" class="btn btn-primary tw-min-w-[130px]">Ok</button>
+        <div class="flex justify-center">
+            <button tabIndex="-1" (click)="confirm()" class="btn btn-primary min-w-[130px]">Ok</button>
         </div>
     </div>
       
