--- a/src/app/admin/product/products-add-edit/products-add-edit.component.html
+++ b/src/app/admin/product/products-add-edit/products-add-edit.component.html
@@ -4,7 +4,7 @@
     </header>
 </section>
 <div *ngIf="!isOptionSelected && !id" class="flex justify-center mt-10 max-md:grid gap-8 min-lg:columns-2 max-md:columns-1">
-    <div class="slide-in-bottom max-w-[300px] rounded-lg overflow-hidden shadow-lg bg-white p-20 min-h-[400px] cursor-pointer" (click)="selectOption('Bulk')">
+    <div class="slide-in-bottom max-w-[300px] rounded-lg overflow-hidden shadow-lg bg-white p-20 min-h-[400px] cursor-pointer" (click)="selectOption('BULK')">
         <div class="flex justify-center p-10 border border-gray rounded-full h-[150px] w-[150px] items-center m-auto">
             <img src="assets/images/bulk.svg" alt="Bulk">
         </div>
@@ -16,12 +16,12 @@
         </p>
     </div>
 
-    <div class="slide-in-bottom max-w-[300px] rounded-lg overflow-hidden shadow-lg bg-white p-20 min-h-[400px] cursor-pointer" (click)="selectOption('Unit')">
+    <div class="slide-in-bottom max-w-[300px] rounded-lg overflow-hidden shadow-lg bg-white p-20 min-h-[400px] cursor-pointer" (click)="selectOption('ITEM')">
         <div class="flex justify-center p-10 border border-gray rounded-full h-[150px] w-[150px] items-center m-auto">
-            <img src="assets/images/unit.svg" alt="Unit">
+            <img src="assets/images/unit.svg" alt="Item">
         </div>
         <div class="flex justify-center pt-5 pb-10">
-            <h4 class="heading-4 text-gray">Unit</h4>
+            <h4 class="heading-4 text-gray">Item</h4>
         </div>
         <p class="heading-6 text-center text-gray">
             Add products such as containers, pallets or bonds.<br>
