--- a/src/app/admin/product/products-success/products-success.component.html
+++ b/src/app/admin/product/products-success/products-success.component.html
@@ -10,7 +10,7 @@
     <fa-icon icon="party-horn" class="text-primary text-[270px]"></fa-icon>
   </div>
   <div class="flex justify-center max-md:flex-col min-xl:px-40 max-md:px-0 max-md:gap-5 min-md:max-w-[560px] max-sm:w-full m-auto gap-5">
-    <button type="button" class="btn btn-primary min-lg:min-w-[200px]" routerLink="../../">Home</button>
+    <button type="button" class="btn btn-primary min-lg:min-w-[200px]" routerLink="../">Home</button>
     <button type="button" class="btn btn-primary min-lg:min-w-[200px]" routerLink="../add">New Product</button>
   </div>
 </success-container>
