--- a/src/app/operator/layout/header/operator-header.component.html
+++ b/src/app/operator/layout/header/operator-header.component.html
@@ -37,7 +37,7 @@
 <header class="layout-wrapper">
   <app-loader class="m-auto flex-grow" *ngIf="(isLoading$ | async)" [fullScreen]="false"></app-loader>
   <div *ngIf="!(isLoading$ | async)" class="flex flex-grow justify-center items-center gap-2">
-    <fa-icon *ngIf="userRole === 'ROLE_PORT_ADMIN'" (click)="openChangeLocationModal()" icon="location-dot" class="text-primary cursor-pointer text-3xl font-bold"></fa-icon>
+    <fa-icon *ngIf="userRole === 'ROLE_USER_PORTADMIN'" (click)="openChangeLocationModal()" icon="location-dot" class="text-primary cursor-pointer text-3xl font-bold"></fa-icon>
     <span class="text-3xl font-bold">{{locationName$}}</span>
   </div>
   <div class="logo-container" *ngIf="logoSrc" [routerLink]="logoRedirect" [relativeTo]="activatedRoute.parent">
