--- a/src/app/admin/location-settings/location-settings.component.html
+++ b/src/app/admin/location-settings/location-settings.component.html
@@ -1,4 +1,4 @@
-<div class="flex-grow flex flex-col gap-8" *ngIf="userRole === 'ADMIN'">
+<div class="flex-grow flex flex-col gap-8" *ngIf="userRole === 'ROLE_USER_ADMIN'">
     <div class="flex sm:justify-center md:flex-row max-md:flex-col">
         <h4 class="heading-4 mr-3">Settings</h4>
     </div>
@@ -27,7 +27,7 @@
     </div>
 </div>
 
-<div class="flex-grow flex flex-col gap-8" *ngIf="userRole !== 'ADMIN'">
+<div class="flex-grow flex flex-col gap-8" *ngIf="userRole !== 'ROLE_USER_ADMIN'">
     <div class="flex sm:justify-center md:flex-row max-md:flex-col">
         <h4 class="heading-4 mr-3">Settings</h4>
     </div>
