--- a/src/app/admin/users/users-add-edit/users-add-edit.component.html
+++ b/src/app/admin/users/users-add-edit/users-add-edit.component.html
@@ -1,5 +1,4 @@
-<!--<edit-container headerTitle="Add user - users details">-->
-    <edit-container [headerTitle]="id ?  'Edit Users Details':'Add Users Details'">
+ <edit-container [headerTitle]="id ?  'Edit Users Details':'Add Users Details'">
     <app-loader *ngIf="isLoading$ | async" [isContainer]="true" [fullScreen]="false"></app-loader>
     <form [formGroup]="userForm" *ngIf="!(isLoading$ | async)">
             <div class="flex flex-col mx-auto max-w-[440px] gap-5">
@@ -16,9 +15,9 @@
                 <div formGroupName="user">
                     <div iconic-select-wrapper leftIcon="eye" [rightIcon]="['fas', 'caret-down']">
                       <select spAccessInputRef name="status" id="status" formControlName="status">
-                          <option value="" disabled>Status</option>
-                          <option value="true">Active</option>
-                          <option value="false">Inactive</option>
+                          <option [value]="null" disabled>Status</option>
+                          <option [value]="true">Active</option>
+                          <option [value]="false">Inactive</option>
                       </select>
                     </div>
                 </div>
