--- a/src/app/operator/map/search/search.component.html
+++ b/src/app/operator/map/search/search.component.html
@@ -17,16 +17,16 @@
                             *ngIf="companiesFilterForm.valid" (click)="onCompaniesChange($event, 'delete')"></fa-icon>
                     </div>
                     <!-- <app-loader *ngIf="isPortsLoading$ | async"></app-loader> -->
-                    <div iconic-select-wrapper [dashboardInp]="true" [showValidation]="false"
+                    <!-- <div iconic-select-wrapper [dashboardInp]="true" [showValidation]="false"
                         [loading]="(isPortsLoading$ | async)" [rightIcon]="['fas', 'caret-down']">
                         <select spAccessInputRef name="port" id="port" (change)="retriveCompanines($event)"
                             formControlName="portId">
                             <option value="" disabled selected>Port</option>
                             <option [value]="port?.id" *ngFor="let port of ports">{{port?.name}}</option>
                         </select>
-                    </div>
+                    </div> -->
                     <div iconic-select-wrapper [dashboardInp]="true" [showValidation]="false"
-                        [class.hidden]="isCompaniesLoading$ | async" [rightIcon]="['fas', 'caret-down']">
+                     [rightIcon]="['fas', 'caret-down']">
                         <select spAccessInputRef name="company" id="company" (change)="onCompaniesChange($event)"
                             formControlName="companyId">
                             <option value="" disabled selected>Company</option>
