--- a/src/app/operator/scheduling/planning-list/planning-list.component.html
+++ b/src/app/operator/scheduling/planning-list/planning-list.component.html
@@ -28,7 +28,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{row?.sId || '-'}}
+                                {{row?.planningWater?.planningWaterShipments[0]?.sId | json}}
                             </td>
                             <td cdk-footer-cell *cdkFooterCellDef [colSpan]="displayedColumns.length"
                                 class="py-4 font-bold text-center">
@@ -42,7 +42,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{ row?.planningWater?.manevre || "-" }}
+                                {{ row?.planningWater?.planningWaterShipments[0]?.maneuvering |json }}
                             </td>
                         </ng-container>
 
@@ -53,7 +53,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{ row?.planningWater?.vesselId || "-" }}
+                                {{ row?.planningWater?.planningWater?.planningWaterShipments[0]?.vesselId |json }}
                             </td>
                         </ng-container>
 
@@ -66,7 +66,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{ row?.berth || "-" }}
+                                {{ row?.planningWater?.planningWaterShipments[0]?.berth |json }}
                             </td>
                         </ng-container>
                         <ng-container cdkColumnDef="products">
@@ -78,7 +78,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row;">
-                                {{ row?.productCount || "-" }}
+                                {{ row?.planningWater?.planningWaterShipments[0]?.productCount |json }}
                             </td>
                         </ng-container>
                         <ng-container cdkColumnDef="estimatedTimeArrival">
@@ -90,7 +90,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{ row?.planningWater?.estimatedTimeArrival || "-" }}
+                                {{ row?.planningWater?.departureTime |json }}
                             </td>
                         </ng-container>
                         <ng-container cdkColumnDef="relativeTimeArrival">
@@ -102,7 +102,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{ row?.planningWater?.relativeTimeArrival || "-" }}
+                                {{ row?.planningWater?.arrivalTime |json }}
                             </td>
                         </ng-container>
                         <ng-container cdkColumnDef="delay">
@@ -114,7 +114,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{ row?.planningWater?.delay || "-" }}
+                                {{ row?.planningWater?.delay |json }}
                             </td>
                         </ng-container>
                         <ng-container cdkColumnDef="coordinates">
@@ -126,7 +126,7 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                {{ row?.sidCoordinates || "-" }}
+                                {{ row?.planningWater?.planningWaterShipments[0]?.sidCoordinates |json }}
                             </td>
                         </ng-container>
                         <ng-container cdkColumnDef="shipmentStatus">
@@ -138,8 +138,8 @@
                                 </section>
                             </th>
                             <td cdk-cell *cdkCellDef="let row">
-                                <mat-chip [ngStyle]="{'background-color': row?.planningWaterShipmentStatus?.color}">
-                                    {{ row?.planningWaterShipmentStatus?.name }}
+                                <mat-chip [ngStyle]="{'background-color': row?.planningWater?.planningWaterShipments[0]?.planningWaterShipmentStatus?.color}">
+                                    {{ row?.planningWater?.planningWaterShipments[0]?.planningWaterShipmentStatus?.name }}
                                     <!-- {{ row?.planningWater?.planningWaterStatus?.color }} -->
                                 </mat-chip>
                             </td>
